--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <h1>Lego Star Wars gallery</h1>
         <div>  
             <div class="img-wrap" style="display:flex;">
-            <img src="./../image/timg.jpeg">
-            <img src="./../image/one.jpeg">
-            <img src="./../image/other.jpeg">
+            <img src="./image/timg.jpeg">
+            <img src="./image/one.jpeg">
+            <img src="./image/other.jpeg">
             <img :src="url" v-if="url">
             </div>
             <div>
